--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <title>Calculator app</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <!--google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,7 @@
   <div id="root">
 
   </div>
+  <script type="module" src="./src/index.jsx"></script>
 
 </body>
 </html>
