--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="root">
 
   </div>
-  <script type="module" src="./src/index.jsx"></script>
+  <script type="module" src="./src/main.jsx"></script>
 
 </body>
 </html>
